# cmake-tutorial

./: CMakeLists.txt  README.md
doc/: Doxyfile
doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  funzioni__esempio_8c.html  funzioni__esempio_8h.html  funzioni__esempio_8h_source.html  globals.html  globals_func.html  hello__world_8c.html  index.html
doc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  searchdata.js
include/: funzioni_esempio.h
src/: funzioni_esempio.c  hello_world.c
